--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
@@ -28,5 +28,8 @@
 	<classpathentry kind="lib" path="/home/etudiant/db200253/Téléchargements/gs-core-2.0.jar"/>
 	<classpathentry kind="lib" path="/home/etudiant/db200253/Téléchargements/gs-ui-javafx-2.0.jar"/>
 	<classpathentry kind="lib" path="/home/etudiant/db200253/Téléchargements/gs-ui-swing-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/staff/Downloads/gs-algo-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/staff/Downloads/gs-core-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/staff/Downloads/gs-ui-swing-2.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
